<resources>
    <string name="app_name">Remind</string>
    <string name="string_title_remind_main">리마인드</string>
    <string name="string_title_remind_setting">리마인드 설정</string>
    <string name="string_sub_title_remind_name">리마인드 이름</string>
    <string name="string_edit_hint_remind_name">Please enter a name</string>
    <string name="string_sub_title_time_setting">시간 설정</string>
    <string name="string_sub_title_ringtone">벨소리</string>
    <string name="string_ringtone">Ringtone</string>
    <string name="string_bottom_save_button">Save</string>
    <string name="string_bottom_dismiss">Dismiss</string>
    <string name="string_time_format">%1$d:%2$d</string>
    <string name="string_remind_name_empty">리마인드 이름을 입력해주세요.</string>

    <string name="string_remind_alarm_register">알람이 등록되었습니다.</string>
    <string name="string_remind_channel_name">리마인드 채널</string>
    <string name="string_remind_notification_name">리마인드 알림</string>

</resources>